Made minor changes to index and style so that nav bar would stay in same position on all pages, fixed dashboard.html so that nav bar wasn't overlapping the images

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ input{
 
   .contentP{
     position: relative;
-    top: 50%;
+    top: 40%;
     left: 47%;
     margin-right: -50px;
     margin-left: -50px;
